force-app/main/default/objects/Site_Staff__c/Site_Staff__c.object-meta.xml
<CustomObject>
    <description>Used to connect Contacts with Study Sites to represent a Principal Investigator&#39;s team</description>

    <label>Site Staff</label>
    <nameField>
        <displayFormat>Staff #{0000}</displayFormat>
        <label>Site Staff</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Staff</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>