force-app/main/default/objects/Site_Staff__c/fields/Clinical_Trial_Profile__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Profile__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Study_Site__r.Clinical_Trial_Profile__c,  Study_Site__r.Clinical_Trial_Profile__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clinical Trial Profile</label>
    <type>Text</type>
</CustomField>