force-app/main/default/objects/Site_Staff__c/fields/is_Invited__c.field-meta.xml
<CustomField>
    <fullName>is_Invited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check whether site staff is invited or not</description>
    <label>is Invited</label>
    <type>Checkbox</type>
</CustomField>