force-app/main/default/objects/Site_Staff__c/fields/is_Site_and_Staff_Same_Country__c.field-meta.xml
<CustomField>
    <fullName>is_Site_and_Staff_Same_Country__c</fullName>
    <formula>Site_Contact__r.MailingCountry == Study_Site__r.Site__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Site and Staff Same Country</label>
    <type>Checkbox</type>
</CustomField>