force-app/main/default/objects/Site_Staff__c/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <label>Roles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>