force-app/main/default/objects/Site_Staff__c/fields/Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact__c</fullName>
    <label>Site Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Staff&#39;s Study Sites</relationshipLabel>
    <relationshipName>PI_Profiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>