force-app/main/default/objects/Site_Staff__c/fields/Site_Email_Key__c.field-meta.xml
<CustomField>
    <fullName>Site_Email_Key__c</fullName>
    <formula>&apos;_&apos;</formula>
    <inlineHelpText>Site Email Key</inlineHelpText>
    <label>Site_Email_Key</label>
    <type>Text</type>
</CustomField>