force-app/main/default/objects/Site_Staff__c/fields/Site_Number2__c.field-meta.xml
<CustomField>
    <fullName>Site_Number2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Site Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>