force-app/main/default/objects/Site_Staff__c/fields/Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Site_Number__c</fullName>
    <formula>Study_Site__r.Study_Site_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Number</label>
    <type>Text</type>
</CustomField>