force-app/main/default/objects/Site_Staff__c/fields/Site_Staff__c.field-meta.xml
<CustomField>
    <fullName>Site_Staff__c</fullName>
    <formula>if(is_Site_and_Staff_Same_Country__c == false,  HYPERLINK(&quot;/&quot;&amp; Id , Name ) , &apos;-&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Staff</label>
    <type>Text</type>
</CustomField>